# rust1

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: admin_handlers.rs  auth.rs  db.rs  handlers.rs  main.rs  middleware.rs  models.rs  repository.rs  schema.rs  services.rs  utils.rs
templates/: base.html  credentials.html  error.html  login.html
